test/pass/test_struct_math_ops.m8
ᛋMathOps᛬
ᛵ
    ᛃident᛬ᚮvalue᛬ᛰᚭ᛬ᛰ᛬
        ᚷvalue
    ᛵ
    ᛃaddOne᛬ᚮvalue᛬ᛰᚭ᛬ᛰ᛬
        ᚷvalue᛭1
ᛵ
ᚡseed᛬1
