test/fail/struct_method_missing_param_type.m8
ᛋBroken᛬
ᛵ
    ᛃbad᛬ᚮvalue᛬ᚭ᛬ᛰ᛬
        ᚷvalue
